--- a/tape_en_cours/.vscode/settings.json
+++ b/tape_en_cours/.vscode/settings.json
@@ -4,5 +4,10 @@
     "intermediaire",
     "MAJORITE",
     "resultat"
-  ]
+  ],
+  "python.testing.pytestArgs": [
+    "."
+  ],
+  "python.testing.unittestEnabled": false,
+  "python.testing.pytestEnabled": true
 }
