--- a/tape_en_cours/requirements.txt
+++ b/tape_en_cours/requirements.txt
@@ -19,14 +19,17 @@ defusedxml==0.7.1
 entrypoints==0.4
 executing==1.1.0
 fastjsonschema==2.16.2
+Flask==2.2.2
 fonttools==4.37.3
 gitautopush==0.4.1
 idna==3.4
 importlib-metadata==4.12.0
+iniconfig==1.1.1
 ipykernel==6.15.3
 ipython==8.5.0
 ipython-genutils==0.2.0
 ipywidgets==8.0.2
+itsdangerous==2.1.2
 jedi==0.18.1
 Jinja2==3.1.2
 jsonschema==4.16.0
@@ -59,15 +62,18 @@ pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.2.0
 platformdirs==2.5.2
+pluggy==1.0.0
 prometheus-client==0.14.1
 prompt-toolkit==3.0.31
 psutil==5.9.2
 ptyprocess==0.7.0
 pure-eval==0.2.2
+py==1.11.0
 pycparser==2.21
 Pygments==2.13.0
 pyparsing==3.0.9
 pyrsistent==0.18.1
+pytest==7.1.3
 python-dateutil==2.8.2
 pytz==2022.2.1
 pyzmq==24.0.1
@@ -91,5 +97,6 @@ typing-extensions==4.3.0
 urllib3==1.26.12
 wcwidth==0.2.5
 webencodings==0.5.1
+Werkzeug==2.2.2
 widgetsnbextension==4.0.3
 zipp==3.8.1
